syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
option go_package = "go-grpc/pb"; 

message Image {
    string image_id = 1;
    string image_type = 2;
    string image_name= 3;
    uint32 image_size = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}


